--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ Logan Nochez
 .bloc_page
 {
     display: flex;
+    flex-direction: row;
     width: 75%;
     margin: auto;
 }
@@ -142,18 +143,14 @@ aside h2
     border-radius: 100%;
 }
 
-/* Partie droite ou "contenu" */
-
-.identite
+aside .identite
 {
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 9%;
-    margin-bottom: 8%;
+    display: none;
 }
 
-h1 + p
+/* Partie droite ou "contenu" */
+
+.statut p
 {
     font-family: 'lato-semibold', Arial, sans-serif;
     font-size: 1.5em;
@@ -184,6 +181,15 @@ p span
     margin-bottom: auto;
 }
 
+.contenu .identite
+{
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 9%;
+    margin-bottom: 8%;
+}
+
 .diplomes_et_formations p, ul, .experiences_professionnelles p
 {
     font-family: 'lato-medium', Arial, sans-serif;
@@ -201,4 +207,62 @@ p span
     font-family: 'lato-bold', Arial, sans-serif;
     font-size: 1.1em;
     color: #404040;
+}
+
+/* Partie responsive */
+
+@media screen and (max-width: 1000px)
+{
+    .bloc_page
+    {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .photo_cv
+    {
+        margin-bottom: auto;
+    }
+
+    aside
+    {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-right: 2px solid #1565C0;
+        border-bottom: 0;
+    }
+
+    .contenu
+    {
+        width: 100%;
+    }
+
+    .contenu .identite
+    {
+        display: none;
+    }
+
+    aside .identite
+    {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background-color: white;
+    }
+
+    aside .identite h1
+    {
+        font-size: 2.7em;
+        text-align: center;
+        width: 100%;
+        margin: 0;
+    }
+
+    aside .identite p
+    {
+        font-size: 1.3em;
+        text-align: center;
+    }
+
 }
